fixed layout issues

--- a/static/global.css
+++ b/static/global.css
@@ -174,10 +174,17 @@ main {
 @media (width > 50rem) {
   main {
     border-left: none;
-      margin: 0.25rem;
+      margin: 0 0.25rem;
       margin-top: 1rem;
       padding-top: 2.5rem;
       justify-self: end;
-      max-width: calc(100% - 18%);
+      max-width: calc(100% - 19%);
+    }
+
+    footer {
+      border-left: none;
+      margin:0 0.25rem;
+      justify-self: end;
+      max-width: calc((100% - 21%));
     }
   }
